--- a/package.json
+++ b/package.json
@@ -5,12 +5,41 @@
     "scripts": {
         "publish:patch": "npm version patch && pulumi up",
         "publish:minor": "npm version minor && pulumi up",
-        "publish:major": "npm version major && pulumi up"
+        "publish:major": "npm version major && pulumi up",
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+      "extends": [
+        "react-app",
+        "react-app/jest"
+      ]
+    },
+    "browserslist": {
+      "production": [
+        ">0.2%",
+        "not dead",
+        "not op_mini all"
+      ],
+      "development": [
+        "last 1 chrome version",
+        "last 1 firefox version",
+        "last 1 safari version"
+      ]
     },
     "dependencies": {
         "@pulumi/aws": "^4.10.0",
         "@pulumi/awsx": "^0.30.0",
         "@pulumi/pulumi": "^3.6.0",
-        "mime": "^2.4.4"
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^13.4.0",
+        "@testing-library/user-event": "^13.5.0",
+        "mime": "^2.4.4",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-scripts": "^5.0.1",
+        "web-vitals": "^2.1.4"
     }
 }
