add postversion script so i dont forget to push tags

--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
         "publish:patch": "npm version patch && pulumi up",
         "publish:minor": "npm version minor && pulumi up",
         "publish:major": "npm version major && pulumi up",
-        "version": "npm run copy-site && git add -A www",
         "preversion": "npm run build",
+        "version": "npm run copy-site && git add -A www",
+        "postversion": "git push && git push --tags",
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
